--- a/EssentialTrainingTests/EssentialTrainingTests.csproj
+++ b/EssentialTrainingTests/EssentialTrainingTests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SimpleArrayTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
