--- a/EssentialTrainingApp/EssentialTrainingApp.csproj
+++ b/EssentialTrainingApp/EssentialTrainingApp.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="4.7.11" />
+    <PackageReference Include="NLog.Config" Version="4.7.11" />
+  </ItemGroup>
+
 </Project>
